完成服务端记录模块已有接口的调试和改进
